[package]
name = "graphite-rust"
version = "0.0.1"
authors = ["Xavier Lange <xrlange@gmail.com>"]

[lib]
name="graphite"
path="src/lib.rs"

[[bin]]
name="carbon"

[dependencies]
byteorder = "*"
gcc = "*"
time = "*"
log = "*"
env_logger = "*"

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
