[package]
name = "graphite"
version = "0.2.3"
authors = ["Xavier Lange <xrlange@gmail.com>"]
description = "A fast, pure rust graphite implementation. Includes whisper, carbon, and graphite."
license = "MIT"
homepage = "https://www.github.com/tureus/graphite-rust"
repository = "https://github.com/tureus/graphite-rust.git"

[lib]
name="graphite"
path="src/lib.rs"

# [[bin]]
# name="whisper"

[[bin]]
name="carbon"

## [[bin]]
## name="graphite"
## [[graphite.dependencies]] # not valid code!
## iron = "*"
## # router = "*"
## urlencoded = "*"
## glob = "*"
## # iron-test = "*"
## persistent = "*" # Not a great name for a HTTP middle lib... there's already a Haskell lib for doing real data persistence with the same name.
## router = "*"

## Out of date deps?
# num = "*"

[dependencies]
byteorder = "*"
gcc = "*"
time = "*"
log = "*"
env_logger = "*"
docopt = "0.6.64"
regex = "*"
libc = "*"
rustc-serialize = "*"
whisper = "*"

# [dependencies.router]
# git = "https://github.com/iron/router.git"

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
